Fixed bleeding section

--- a/public/css/bottom-grid.css
+++ b/public/css/bottom-grid.css
@@ -2,6 +2,11 @@
     display: grid;
     grid-template-columns: 4fr 5fr;
     grid-template-rows: 1fr;
+    width: 100%;
+}
+
+.text-container{
+    width: 100%;
 }
 
 .grid-item{}
